--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -55,7 +55,6 @@ bEnableColorizedEditorTabs=True
 CurrentAppliedTheme=134380265FBB4A9CA00A1DC9770217B8
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-LastExecutedPlayModeType=PlayMode_Simulate
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -173,8 +172,15 @@ StaticMeshComponent=PuertaTransportadora.TransformCommon.Transform,StaticMeshAct
 BloqueBurbuja=PuertaTransportadora.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,BloqueBurbuja.TransformCommon.Transform
 BloqueMadera=PuertaTransportadora.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform
 
+[/Script/LiveCoding.LiveCodingSettings]
+bEnabled=False
+bPreloadEngineModules=False
+bPreloadEnginePluginModules=False
+bPreloadProjectModules=True
+bPreloadProjectPluginModules=True
+
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Classes_Game/BomberMan_0120255
+ContentBrowserTab1.SelectedPaths=/Classes_Game
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -205,8 +211,8 @@ ContentBrowserTab1.JumpMRU=/All/Classes_Game/BomberMan_0120255/Public
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-BomberMan_0120255.TimeStamp=2025.05.07-22.13.59
-BomberMan_0120255.LastCompileMethod=Unknown
+BomberMan_0120255.TimeStamp=2025.05.16-03.14.00
+BomberMan_0120255.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2025.04.23-17.24.39
 StorageServerClient.LastCompileMethod=Unknown
 CookOnTheFly.TimeStamp=2025.04.23-17.22.56
@@ -1486,6 +1492,72 @@ SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
+EditorStyleSettings="\"Object\" "
+SlateThemeManager="\"Object\" "
+AudioEditorSettings="\"Object\" "
+DeveloperSettings="\"Object\" "
+BlueprintEditorSettings="\"Object\" "
+EditorLoadingSavingSettings="\"Object\" \"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
+EditorSettings="\"Object\" "
+SourceCodeAccessSettings="\"Object\" "
+CollectionSettings="\"Object\" "
+EnhancedInputEditorSettings="\"Object\" "
+DeveloperSettingsBackedByCVars="\"Object\" "
+EditorExperimentalSettings="\"Object\" "
+InterchangeEditorSettings="\"Object\" "
+LiveCodingSettings="\"Object\" "
+VRModeSettings="\"Object\" "
+VISettings="\"Object\" "
+EditorPerformanceSettings="\"Object\" "
+InternationalizationSettingsModel="\"Object\" "
+OutputLogSettings="\"Object\" "
+TextureEncodingUserSettings="\"Object\" "
+TextureImportUserSettings="\"Object\" "
+EditorPerProjectUserSettings="\"Object\" "
+WorldPartitionEditorSettings="\"Object\" "
+WorldPartitionEditorPerProjectUserSettings="\"Object\" "
+LevelEditorMiscSettings="\"Object\" "
+OnlinePIESettings="\"Object\" "
+LevelEditorPlaySettings="\"Object\" "
+LevelEditorViewportSettings="\"Object\" "
+ControlRigEditorSettings="\"Object\" "
+RigVMEditorSettings="\"Object\" "
+WidgetDesignerSettings="\"Object\" "
+PersonaOptions="\"Object\" "
+AnimationBlueprintEditorSettings="\"Object\" "
+TileSetEditorSettings="\"Object\" "
+CurveEditorSettings="\"Object\" "
+FlipbookEditorSettings="\"Object\" "
+SkeletalMeshEditorSettings="\"Object\" "
+TileMapEditorSettings="\"Object\" "
+MetasoundEditorSettings="\"Object\" "
+SequencerSettings="\"Object\" "
+SpriteEditorSettings="\"Object\" "
+GraphEditorSettings="\"Object\" "
+ContentBrowserSettings="\"Object\" "
+TakeRecorderUserSettings="\"Object\" "
+AnimGraphSettings="\"Object\" "
+LevelInstanceEditorPerProjectUserSettings="\"Object\" "
+MeshPaintSettings="\"Object\" "
+BlueprintHeaderViewSettings="\"Object\" "
+GameplayCamerasEditorSettings="\"Object\" "
+StateTreeEditorSettings="\"Object\" "
+ModelingComponentsEditorSettings="\"Object\" "
+LiveLinkEditorSettings="\"Object\" "
+LightMixerEditorSettings="\"Object\" "
+ObjectMixerEditorSettings="\"Object\" "
+FractureModeCustomizationSettings="\"Object\" "
+ModelingToolsModeCustomizationSettings="\"Object\" "
+PythonScriptPluginUserSettings="\"Object\" "
+AnalyticsPrivacySettings="\"Object\" \"Object.Options.bSendUsageData\" "
+CrashReportsPrivacySettings="\"Object\" \"Object.Options.bSendUnattendedBugReports\" "
+EditorDataStorageSettings="\"Object\" "
+AutomationTestSettings="\"Object\" "
+GameplayDebuggerUserSettings="\"Object\" "
+GameplayTagsDeveloperSettings="\"Object\" "
+CrashReporterSettings="\"Object\" "
+LogVisualizerSettings="\"Object\" "
+DataValidationSettings="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1640,6 +1712,301 @@ PlayerStart.Physics=True
 PlayerStart.Networking=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+EditorStyleSettings.Theme=True
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Accessibility=True
+EditorStyleSettings.Graphs=True
+EditorKeyboardShortcutSettings.LightActor=True
+EditorKeyboardShortcutSettings.AssetManagerEditorCommands=True
+EditorKeyboardShortcutSettings.InsightsStatusBarWidgetCommands=True
+EditorKeyboardShortcutSettings.RigVMBlueprint=True
+EditorKeyboardShortcutSettings.ChaosCacheEditor=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.BuilderCommandCreationManager=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.StandardToolCommands=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.GeometryCollectionSelection=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.NiagaraHierarchyEditorCommands=True
+EditorKeyboardShortcutSettings.ActorBrowsingModeCommands=True
+EditorKeyboardShortcutSettings.TakeRecorderSources=True
+EditorKeyboardShortcutSettings.DataflowEditorWeightMapPaintToolContext=True
+EditorKeyboardShortcutSettings.SourceControl=True
+EditorKeyboardShortcutSettings.DerivedDataSettings=True
+EditorKeyboardShortcutSettings.OptimusShaderTextEditorDocumentTextBox=True
+EditorKeyboardShortcutSettings.BlueprintDebugger=True
+EditorKeyboardShortcutSettings.GameplayCameras_Debugger=True
+EditorKeyboardShortcutSettings.MassDebugger=True
+EditorKeyboardShortcutSettings.StateTreeEditor.Debugger=True
+EditorKeyboardShortcutSettings.ChaosVDEditor=True
+EditorKeyboardShortcutSettings.CameraVariableCollectionEditor=True
+EditorKeyboardShortcutSettings.AnimSequenceCurveEditor=True
+EditorKeyboardShortcutSettings.GenericCurveEditor=True
+EditorKeyboardShortcutSettings.DataflowEditor=True
+EditorKeyboardShortcutSettings.FVariantManagerEditorCommands=True
+EditorKeyboardShortcutSettings.OptimusEditor=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.LevelInstanceEditorMode=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.MediaPlateEditor=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.WidgetPreviewEditor=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.CameraAssetEditor=True
+EditorKeyboardShortcutSettings.CameraRigAssetEditor=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.StateTreeEditor=True
+EditorKeyboardShortcutSettings.CameraRigTransitionEditor=True
+EditorKeyboardShortcutSettings.UVEditor=True
+EditorKeyboardShortcutSettings.NiagaraEditor=True
+EditorKeyboardShortcutSettings.AdvancedPreviewScene=True
+EditorKeyboardShortcutSettings.IKRigSkeleton=True
+EditorKeyboardShortcutSettings.OptimusEditorGraphExplorer=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.FractureEditor=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.TakeRecorder=True
+EditorKeyboardShortcutSettings.OptimusEditorGraph=True
+EditorKeyboardShortcutSettings.GroomVisualizationMenu=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+EditorKeyboardShortcutSettings.CurveEditorTools=True
+EditorKeyboardShortcutSettings.GroomEditorCommands=True
+EditorKeyboardShortcutSettings.ModelingToolsEditMode=True
+EditorKeyboardShortcutSettings.SkeletalMeshModelingTools=True
+EditorKeyboardShortcutSettings.MeshPaintingTools=True
+EditorKeyboardShortcutSettings.InsightsCommands=True
+EditorKeyboardShortcutSettings.LoadingProfilerCommands=True
+EditorKeyboardShortcutSettings.MemoryProfilerCommands=True
+EditorKeyboardShortcutSettings.NetworkingProfilerCommands=True
+EditorKeyboardShortcutSettings.TimingProfilerCommands=True
+EditorKeyboardShortcutSettings.LiveLinkClient.Common=True
+EditorKeyboardShortcutSettings.LumenVisualizationMenu=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.ShowFlagsMenu=True
+EditorKeyboardShortcutSettings.ModelingToolsMeshAttributePaintTool=True
+EditorKeyboardShortcutSettings.ModelingToolsCubeGridTool=True
+EditorKeyboardShortcutSettings.ModelingToolsDrawPolygonTool=True
+EditorKeyboardShortcutSettings.ModelingToolsDrawAndRevolveTool=True
+EditorKeyboardShortcutSettings.ModelingToolsEditMeshMaterials=True
+EditorKeyboardShortcutSettings.ModelingToolsEditMeshPolygonsTool=True
+EditorKeyboardShortcutSettings.ModelingToolsMeshGroupPaintTool=True
+EditorKeyboardShortcutSettings.ModelingToolsMeshPlaneCutTool=True
+EditorKeyboardShortcutSettings.ModelingToolsMeshSelectionTool=True
+EditorKeyboardShortcutSettings.ModelingToolsSculptTool=True
+EditorKeyboardShortcutSettings.ModelingToolsTransformTool=True
+EditorKeyboardShortcutSettings.ModelingToolsMeshVertexPaintTool=True
+EditorKeyboardShortcutSettings.ModelingToolsVertexSculptTool=True
+EditorKeyboardShortcutSettings.FoliageEditMode=True
+EditorKeyboardShortcutSettings.ModelingModeCommands=True
+EditorKeyboardShortcutSettings.ModelingToolsManagerCommands=True
+EditorKeyboardShortcutSettings.MeshPaint=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.ControlRigModularRigModel=True
+EditorKeyboardShortcutSettings.ColorGrading=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.RigVMExecutionStack=True
+EditorKeyboardShortcutSettings.MeshPainter=True
+EditorKeyboardShortcutSettings.ClothPainter=True
+EditorKeyboardShortcutSettings.ClothPainterTools=True
+EditorKeyboardShortcutSettings.CameraShakePreviewer=True
+EditorKeyboardShortcutSettings.AdvancedRenamer=True
+EditorKeyboardShortcutSettings.IKRetarget=True
+EditorKeyboardShortcutSettings.ControlRigEditMode=True
+EditorKeyboardShortcutSettings.ControlRigBlueprint=True
+EditorKeyboardShortcutSettings.IKRig=True
+EditorKeyboardShortcutSettings.ControlRigHierarchy=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.SkeletalMeshModelingToolsSkeletonEditing=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.UVBrushSelect=True
+EditorKeyboardShortcutSettings.BindWidget=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.VisualizationMenu=True
+EditorKeyboardShortcutSettings.GPUSkinCacheVisualizationMenu=True
+EditorKeyboardShortcutSettings.RayTracingDebugVisualizationMenu=True
+EditorKeyboardShortcutSettings.NaniteVisualizationMenu=True
+EditorKeyboardShortcutSettings.VirtualShadowMapVisualizationMenu=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+AudioEditorSettings.NonGameWorld=True
+AudioEditorSettings.AssetMenu=True
+BlueprintEditorSettings.Workflow=True
+BlueprintEditorSettings.VisualStyle=True
+BlueprintEditorSettings.Compiler=True
+BlueprintEditorSettings.DeveloperTools=True
+BlueprintEditorSettings.FindInBlueprints=True
+BlueprintEditorSettings.Play=True
+EditorLoadingSavingSettings.Startup=True
+EditorLoadingSavingSettings.AutoReimport=True
+EditorLoadingSavingSettings.Blueprints=True
+EditorLoadingSavingSettings.AutoSave=True
+EditorLoadingSavingSettings.SourceControl=True
+SourceCodeAccessSettings.Accessor=True
+CollectionSettings.Collections=True
+EnhancedInputEditorSettings.Logging=True
+EnhancedInputEditorSettings.Editor=True
+EnhancedInputEditorSettings.Blueprints=True
+EditorExperimentalSettings.Performance=True
+EditorExperimentalSettings.HDR=True
+EditorExperimentalSettings.Foliage=True
+EditorExperimentalSettings.Tools=True
+EditorExperimentalSettings.UserInterface=True
+EditorExperimentalSettings.Blueprints=True
+EditorExperimentalSettings.Cooking=True
+EditorExperimentalSettings.PIE=True
+EditorExperimentalSettings.LightingBuilds=True
+EditorExperimentalSettings.Core=True
+EditorExperimentalSettings.Materials=True
+EditorExperimentalSettings.Content Browser=True
+EditorExperimentalSettings.WorldPartition=True
+EditorExperimentalSettings.LevelInstance=True
+EditorSettings.DerivedDataCache=True
+EditorSettings.Derived Data Cache Notifications=True
+EditorSettings.Derived Data Cache S3=True
+EditorSettings.Horde=True
+InterchangeEditorSettings.Show Dialog=True
+InterchangeEditorSettings.Group Used=True
+LiveCodingSettings.General=True
+LiveCodingSettings.Modules=True
+VRModeSettings.General=True
+VRModeSettings.Cinematics=True
+VRModeSettings.World Movement=True
+VRModeSettings.UI Customization=True
+VRModeSettings.Motion Controllers=True
+EditorPerformanceSettings.EditorPerformanceTool=True
+EditorPerformanceSettings.EditorPerformance=True
+EditorPerformanceSettings.ViewportResolution=True
+InternationalizationSettingsModel.Internationalization=True
+InternationalizationSettingsModel.Time=True
+OutputLogSettings.Output Log=True
+TextureEncodingUserSettings.EncodeSpeeds=True
+TextureImportUserSettings.ImportSettings=True
+EditorPerProjectUserSettings.DeveloperTools=True
+EditorPerProjectUserSettings.AI=True
+EditorPerProjectUserSettings.SimplygonSwarm=True
+EditorPerProjectUserSettings.HotReload=True
+EditorPerProjectUserSettings.Import=True
+EditorPerProjectUserSettings.Export=True
+EditorPerProjectUserSettings.Behavior=True
+EditorPerProjectUserSettings.UnrealAutomationTool=True
+WorldPartitionEditorSettings.MapConversion=True
+WorldPartitionEditorSettings.Foliage=True
+WorldPartitionEditorSettings.MiniMap=True
+WorldPartitionEditorSettings.WorldPartition=True
+WorldPartitionEditorSettings.HLOD=True
+WorldPartitionEditorPerProjectUserSettings.Default=True
+WorldPartitionEditorPerProjectUserSettings.Data Layer=True
+LevelEditorMiscSettings.Editing=True
+LevelEditorMiscSettings.Sound=True
+LevelEditorMiscSettings.Levels=True
+LevelEditorMiscSettings.Screenshots=True
+OnlinePIESettings.Logins=True
+LevelEditorPlaySettings.PlayInEditor=True
+LevelEditorPlaySettings.GameViewportSettings=True
+LevelEditorPlaySettings.PlayInNewWindow=True
+LevelEditorPlaySettings.PlayInStandaloneGame=True
+LevelEditorPlaySettings.Multiplayer Options=True
+LevelEditorPlaySettings.PlayOnDevice=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.Preview=True
+LevelEditorViewportSettings.Behavior=True
+ControlRigEditorSettings.Interaction=True
+ControlRigEditorSettings.Compilation=True
+ControlRigEditorSettings.NodeGraph=True
+ControlRigEditorSettings.Viewport=True
+ControlRigEditorSettings.Hierarchy=True
+WidgetDesignerSettings.GridSnapping=True
+WidgetDesignerSettings.Dragging=True
+WidgetDesignerSettings.Visuals=True
+WidgetDesignerSettings.Interaction=True
+PersonaOptions.Preview Scene=True
+PersonaOptions.Assets=True
+PersonaOptions.Viewport=True
+PersonaOptions.Audio=True
+PersonaOptions.Composites and Montages=True
+PersonaOptions.Skeleton Tree=True
+PersonaOptions.Mesh=True
+PersonaOptions.Asset Browser=True
+PersonaOptions.Timeline=True
+AnimationBlueprintEditorSettings.Debugging=True
+AnimationBlueprintEditorSettings.Graphs=True
+TileSetEditorSettings.Background=True
+TileSetEditorSettings.Tile Editor=True
+TileSetEditorSettings.Tile Sheet Conditioning=True
+CurveEditorSettings.Curve Editor=True
+FlipbookEditorSettings.Background=True
+SkeletalMeshEditorSettings.AnimationPreview=True
+TileMapEditorSettings.Background=True
+TileMapEditorSettings.Grid=True
+MetasoundEditorSettings.AssetMenu=True
+MetasoundEditorSettings.Audition (Experimental)=True
+MetasoundEditorSettings.General=True
+MetasoundEditorSettings.PinColors=True
+MetasoundEditorSettings.NodeTitleColors=True
+MetasoundEditorSettings.SpectrumAnalyzer=True
+MetasoundEditorSettings.GraphAnimation=True
+MetasoundEditorSettings.Widget Styling (Experimental)=True
+SequencerSettings.Keyframing=True
+SequencerSettings.General=True
+SequencerSettings.Timeline=True
+SequencerSettings.Snapping=True
+SequencerSettings.CurveEditor=True
+SequencerSettings.Playback=True
+SequencerSettings.Filtering=True
+SpriteEditorSettings.Background=True
+GraphEditorSettings.GeneralStyle=True
+GraphEditorSettings.Splines=True
+GraphEditorSettings.PinColors=True
+GraphEditorSettings.NodeTitleColors=True
+GraphEditorSettings.Tracing=True
+GraphEditorSettings.ContextMenu=True
+GraphEditorSettings.CommentNodes=True
+ContentBrowserSettings.ContentBrowser=True
+ContentBrowserSettings.Collections=True
+TakeRecorderUserSettings.User Settings=True
+AnimGraphSettings.Workflow=True
+LevelInstanceEditorPerProjectUserSettings.Create=True
+LevelInstanceEditorPerProjectUserSettings.Pivot=True
+LevelInstanceEditorPerProjectUserSettings.Selection=True
+LevelInstanceEditorPerProjectUserSettings.Break=True
+MeshPaintSettings.Visualization=True
+RigVMEditorSettings.Interaction=True
+BlueprintHeaderViewSettings.Settings=True
+GameplayCamerasEditorSettings.NodeTitleColors=True
+StateTreeEditorSettings.Compiler=True
+StateTreeEditorSettings.Debugger=True
+StateTreeEditorSettings.Experimental=True
+ModelingComponentsEditorSettings.Modeling Tools=True
+LiveLinkEditorSettings.LiveLink=True
+LightMixerEditorSettings.Light Mixer=True
+ObjectMixerEditorSettings.Object Mixer=True
+FractureModeCustomizationSettings.Fracture Mode=True
+ModelingToolsModeCustomizationSettings.Modeling Mode=True
+PythonScriptPluginUserSettings.Python=True
+AnalyticsPrivacySettings.Options=True
+CrashReportsPrivacySettings.Options=True
+EditorDataStorageSettings.MassSettings=True
+AutomationTestSettings.Loading=True
+AutomationTestSettings.Automation=True
+AutomationTestSettings.Open Asset Tests=True
+AutomationTestSettings.PIE Test Maps=True
+AutomationTestSettings.Play all project Maps In PIE=True
+AutomationTestSettings.MiscAutomationSetups=True
+AutomationTestSettings.ExternalTools=True
+AutomationTestSettings.Screenshots=True
+GameplayDebuggerUserSettings.GameplayDebugger=True
+GameplayTagsDeveloperSettings.GameplayTags=True
+CrashReporterSettings.CrashReporter=True
+LogVisualizerSettings.VisualLogger=True
+DataValidationSettings.Data Validation=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1677,4 +2044,9 @@ Project=C:/Program Files/Epic Games/UE_5.5/
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[DetailMultiObjectNodeExpansion]
+EditorStyleSettings=True
+LiveCodingSettings=True
+EnhancedInputEditorSettings=True
 
