--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -182,7 +182,7 @@ bPreloadProjectModules=True
 bPreloadProjectPluginModules=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Classes_Game
+ContentBrowserTab1.SelectedPaths=None
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -215,7 +215,7 @@ ContentBrowserTab1.JumpMRU=/All/Game/LevelPrototyping/Meshes
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-BomberMan_0120255.TimeStamp=2025.05.19-20.15.45
+BomberMan_0120255.TimeStamp=2025.05.23-16.32.00
 BomberMan_0120255.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2025.04.23-17.24.39
 StorageServerClient.LastCompileMethod=Unknown
@@ -1566,7 +1566,7 @@ LogVisualizerSettings="\"Object\" "
 DataValidationSettings="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 
 [WindowsEditor]
@@ -2091,6 +2091,42 @@ Obstaculo.Physics=True
 Obstaculo.Networking=True
 Obstaculo.Input=True
 Obstaculo.Actor=True
+BloqueRaro.TransformCommon=True
+BloqueRaro.StaticMesh=True
+BloqueRaro.Physics=True
+BloqueRaro.Collision=True
+BloqueRaro.Lighting=True
+BloqueRaro.Rendering=True
+BloqueRaro.Mesh Painting=True
+BloqueRaro.HLOD=True
+BloqueRaro.Navigation=True
+BloqueRaro.VirtualTexture=True
+BloqueRaro.Tags=True
+BloqueRaro.Cooking=True
+BloqueRaro.Replication=True
+BloqueRaro.Networking=True
+BloqueRaro.Input=True
+BloqueRaro.Actor=True
+BloqueRaro.Materials=True
+WorldSettings.PrecomputedVisibility=True
+WorldPartitionRuntimeHashSet.RuntimeSettings=True
+WorldSettings.WorldPartitionSetup=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.Network=True
+WorldSettings.Foliage=True
+WorldSettings.Landscape=True
+WorldSettings.Navigation=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.LightmassVolumeLighting=True
+WorldSettings.Nanite=True
+WorldSettings.Audio=True
+WorldSettings.Tick=True
+WorldSettings.Networking=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2136,4 +2172,7 @@ EnhancedInputEditorSettings=True
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
+
+[PlacementMode]
+RecentlyPlaced=/Script/BomberMan_0120255.BloqueRaro;
 
