--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -183,7 +183,7 @@ bPreloadProjectModules=True
 bPreloadProjectPluginModules=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Classes_Game
+ContentBrowserTab1.SelectedPaths=None
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -205,20 +205,20 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.ZoomScale=0
-ContentBrowserTab1.JumpMRU=/All/Classes_Game
 ContentBrowserTab1.JumpMRU=
 ContentBrowserTab1.JumpMRU=/All/Classes_Game/BomberMan_0120255
+ContentBrowserTab1.JumpMRU=/All/Classes_Game
+ContentBrowserTab1.JumpMRU=/All/Game/ThirdPerson
+ContentBrowserTab1.JumpMRU=/All/Classes_Game/BomberMan_0120255/Public
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Shapes
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent
-ContentBrowserTab1.JumpMRU=/All/Classes_Game/BomberMan_0120255/Public
-ContentBrowserTab1.JumpMRU=/All/Game/ThirdPerson
 ContentBrowserTab1.JumpMRU=/All/Game/LevelPrototyping/Meshes
 
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-BomberMan_0120255.TimeStamp=2025.05.28-22.20.31
+BomberMan_0120255.TimeStamp=2025.05.29-03.48.34
 BomberMan_0120255.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2025.04.23-17.24.39
 StorageServerClient.LastCompileMethod=Unknown
